--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,6 +5,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
     <style name="Main_RadioButton">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
@@ -17,11 +18,19 @@
         <item name="android:layout_marginBottom">7dp</item>
         <!--<item name="android:textColor">#bfcdef</item>-->
     </style>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:statusBarColor">@color/colorAccent</item>
+    </style>
+    <!-- CustomCheckBox theme -->
+    <style name="morningCheckBox" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/icon_morning</item>
+    </style>
+    <style name="afternoonCheckBox" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/icon_afternoon</item>
     </style>
 </resources>
