--- a/app/src/main/res/layout/fragment_new_home.xml
+++ b/app/src/main/res/layout/fragment_new_home.xml
@@ -11,10 +11,11 @@
     <!-- TODO: Update blank fragment layout -->
     <include layout="@layout/actionbar"
         android:id="@+id/new_home_actionbar"></include>
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="280dp">
+        android:layout_height="150dp"
+        android:orientation="vertical">
 
         <com.youth.banner.Banner
             android:id="@+id/banner"
@@ -129,6 +130,44 @@
                     android:layout_marginLeft="48dp"/>
                 <TextView
                     android:text="审核并通过周报"
+                    android:textSize="12sp"
+                    android:textColor="#919191"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="48dp"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <!--项目周报审核-->
+        <LinearLayout
+            android:layout_weight="1"
+            android:background="@drawable/new_home_item_bg"
+            android:orientation="horizontal"
+            android:id="@+id/ll_project_weekly"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <ImageView
+                android:layout_gravity="center"
+                android:src="@drawable/review_icon"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:textColor="#3dd078"
+                    android:text="项目周报审核"
+                    android:textSize="32sp"
+                    android:id="@+id/review01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="48dp"/>
+                <TextView
+                    android:text="审核并通过项目周报"
                     android:textSize="12sp"
                     android:textColor="#919191"
                     android:layout_width="wrap_content"
