1.修复软件BUG 首页字体显示 2.完善周报审核功能

--- a/app/src/main/res/layout/item_list_project_01.xml
+++ b/app/src/main/res/layout/item_list_project_01.xml
@@ -31,7 +31,6 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:src="@drawable/you"
-        android:text="shenghe" />
+        android:src="@drawable/you" />
 </RelativeLayout>
 </layout>
