--- a/app/src/main/res/layout/fragment_header.xml
+++ b/app/src/main/res/layout/fragment_header.xml
@@ -99,8 +99,9 @@
 
                     </RelativeLayout>
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
+                        android:orientation="horizontal"
                         android:layout_height="wrap_content"
                         android:background="@drawable/base_line_cf">
 
@@ -116,10 +117,12 @@
                             android:textSize="15sp" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="end"
                             android:layout_marginTop="10dp"
                             android:layout_marginRight="5dp"
                             android:layout_marginBottom="10dp"
@@ -127,7 +130,7 @@
                             android:textColor="#C5C5C5"
                             android:textSize="15sp" />
 
-                    </RelativeLayout>
+                    </LinearLayout>
                 </LinearLayout>
 
                 <RelativeLayout
