--- a/app/src/main/res/layout/fragment_memeber_check.xml
+++ b/app/src/main/res/layout/fragment_memeber_check.xml
@@ -102,7 +102,7 @@
 
                     </RelativeLayout>
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/base_line_cf">
@@ -119,18 +119,20 @@
                             android:textSize="15sp" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
                             android:layout_marginTop="10dp"
+                            android:gravity="end"
+                            android:layout_marginLeft="10dp"
                             android:layout_marginRight="5dp"
                             android:layout_marginBottom="10dp"
                             android:text="@{next_specificThings}"
                             android:textColor="#C5C5C5"
                             android:textSize="15sp" />
 
-                    </RelativeLayout>
+                    </LinearLayout>
                 </LinearLayout>
 
                 <!-- TODO: Update blank fragment layout -->
