--- a/app/src/main/res/layout/fragment_new_home.xml
+++ b/app/src/main/res/layout/fragment_new_home.xml
@@ -143,6 +143,7 @@
             android:layout_weight="1"
             android:background="@drawable/new_home_item_bg"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:id="@+id/ll_project_weekly"
             android:layout_width="match_parent"
             android:layout_height="0dp">
