1.去除项目概况-成员列表中的计划工时 2.修改统计图view点击事件显示字段 工作阶段 ----> 计划名

--- a/app/src/main/res/layout/toast_view.xml
+++ b/app/src/main/res/layout/toast_view.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:id="@+id/toast_plan_name"
-                android:text="工作阶段:"
+                android:text="计划名:"
                 android:textColor="#FFFFFF"
                 android:textSize="12sp" />
 
