--- a/app/src/main/res/layout/item_list_member.xml
+++ b/app/src/main/res/layout/item_list_member.xml
@@ -146,6 +146,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
