1.指派下周工作计划时，自动选择工作类型 2.区分首页成员周报审批和项目周报审批

--- a/app/src/main/res/layout/fragment_new_home.xml
+++ b/app/src/main/res/layout/fragment_new_home.xml
@@ -122,7 +122,7 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:textColor="#3dd078"
-                    android:text="周报审核review"
+                    android:text="成员周报审核review"
                     android:textSize="32sp"
                     android:id="@+id/review"
                     android:layout_width="wrap_content"
