--- a/app/src/main/res/layout/activity_settings_next_week_plan.xml
+++ b/app/src/main/res/layout/activity_settings_next_week_plan.xml
@@ -44,16 +44,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:gravity="start"
-                        android:textSize="15sp" />
-
-                    <ImageView
-                        android:id="@+id/workType_drop_img"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="5dp"
-                        android:src="@drawable/dropdown"
+                        android:gravity="end"
                         android:textSize="15sp" />
 
                 </LinearLayout>
