1.修复软件BUG 进入成员信息，点击待审批的周报返回，点击项目工时，姓名消失 2.项目负责人指派项目计划，无法修改此项目计划

--- a/app/src/main/res/layout/fragment_header.xml
+++ b/app/src/main/res/layout/fragment_header.xml
@@ -8,6 +8,9 @@
         <variable
             name="last_specificThings"
             type="String"></variable>
+        <variable
+            name="last_approval_states"
+            type="String"></variable>
     </data>
 
     <LinearLayout
@@ -68,7 +71,7 @@
                             android:textSize="15sp" />
 
                     </RelativeLayout>
-
+                    <!--阶段完成百分比-->
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -99,6 +102,7 @@
 
                     </RelativeLayout>
 
+                    <!--具体工作事项-->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
@@ -131,6 +135,40 @@
                             android:textSize="15sp" />
 
                     </LinearLayout>
+
+                    <!--审批状态-->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/base_line_cf">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="25dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:text="审批状态"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="end"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginBottom="10dp"
+                            android:text="@{last_approval_states}"
+                            android:textColor="#C5C5C5"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
                 </LinearLayout>
 
                 <RelativeLayout
@@ -156,7 +194,6 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <Button
                 android:id="@+id/allow"
                 android:layout_width="0dp"
@@ -179,7 +216,17 @@
                 android:background="@drawable/detail_check_not_allow_btn"
 
                 android:text="驳回" />
+
         </LinearLayout>
+        <TextView
+            android:id="@+id/last_aprroval_status"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="已通过"
+            android:visibility="gone"
+            android:textColor="@color/colorAccent"
+            android:textSize="15sp"/>
     </LinearLayout>
 
 </layout>
