--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -43,6 +43,17 @@
             android:scaleType="center"
             android:visibility="gone"
             app:srcCompat="@drawable/jiahao" />
+        <TextView
+            android:id="@+id/action_menu_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:text="第39周"
+            android:textColor="#FFFFFF"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:scaleType="center"
+            android:visibility="gone"/>
     </RelativeLayout>
 
     <RelativeLayout
