--- a/app/src/main/res/layout/fragment_new_home.xml
+++ b/app/src/main/res/layout/fragment_new_home.xml
@@ -14,242 +14,188 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="250dp"
         android:orientation="vertical">
 
         <com.youth.banner.Banner
             android:id="@+id/banner"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></com.youth.banner.Banner>
+            android:layout_height="match_parent">
+        </com.youth.banner.Banner>
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
+        android:layout_margin="5dp"
+        android:background="@drawable/bg_white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!-- 项目概况-->
         <LinearLayout
-            android:layout_weight="1"
-            android:background="@drawable/new_home_item_bg"
-            android:id="@+id/project_info_area"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
-            <ImageView
-                android:layout_gravity="center"
-                android:src="@drawable/project_icon"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-                <LinearLayout
-                    android:gravity="center_vertical"
-                    android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <!-- 项目概况-->
+            <LinearLayout
+                android:layout_weight="1"
+                android:background="@drawable/new_home_item_bg"
+                android:id="@+id/project_info_area"
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_margin="1dp"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/project_icon"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <TextView
-                        android:textColor="#3dd078"
-                        android:text="项目概况project"
-                        android:textSize="32sp"
-                        android:id="@+id/project_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="48dp"/>
-                    <TextView
-                        android:text="点击了解项目概况"
-                        android:textSize="12sp"
-                        android:textColor="#919191"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="48dp"/>
-                </LinearLayout>
-        </LinearLayout>
-        <!-- 周报填写 -->
-        <LinearLayout
-            android:background="@drawable/new_home_item_bg"
-            android:layout_weight="1"
-            android:id="@+id/report_fill_area"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-            <ImageView
-                android:layout_gravity="center"
-                android:src="@drawable/fill_icon"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <LinearLayout
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:textColor="#3dd078"
-                    android:text="周报填写Fill"
-                    android:textSize="32sp"
-                    android:id="@+id/fill_report"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
-                <TextView
-                    android:text="快捷填写周报"
-                    android:textSize="12sp"
-                    android:textColor="#919191"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
+                    android:text="项目概况"
+                    android:textSize="15sp"
+                    android:id="@+id/project_info"
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
-        </LinearLayout>
-        <!-- 周报审核-->
-        <LinearLayout
-            android:layout_weight="1"
-            android:background="@drawable/new_home_item_bg"
-            android:orientation="horizontal"
-            android:id="@+id/report_review_area"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-            <ImageView
-                android:layout_gravity="center"
-                android:src="@drawable/review_icon"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <!-- 周报填写 -->
             <LinearLayout
-                android:gravity="center_vertical"
+                android:background="@drawable/new_home_item_bg"
+                android:layout_weight="1"
+                android:id="@+id/report_fill_area"
                 android:orientation="vertical"
-                android:layout_width="match_parent"
+                android:layout_margin="1dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent">
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/fill_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:textColor="#3dd078"
-                    android:text="成员周报审核review"
-                    android:textSize="32sp"
-                    android:id="@+id/review"
+                    android:text="周报填写"
+                    android:textSize="15sp"
+                    android:id="@+id/fill_report"
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+            <!-- 成员周报审核-->
+            <LinearLayout
+                android:layout_weight="1"
+                android:background="@drawable/new_home_item_bg"
+                android:orientation="vertical"
+                android:id="@+id/report_review_area"
+                android:layout_margin="1dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_gravity="center"
+                    android:src="@drawable/review_icon"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
+                    android:layout_height="wrap_content" />
                 <TextView
-                    android:text="审核并通过周报"
-                    android:textSize="12sp"
-                    android:textColor="#919191"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
+                    android:textColor="#3dd078"
+                    android:text="成员周报审核"
+                    android:textSize="15sp"
+                    android:id="@+id/review"
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
 
-        <!--项目周报审核-->
+
         <LinearLayout
-            android:layout_weight="1"
-            android:background="@drawable/new_home_item_bg"
             android:orientation="horizontal"
-            android:visibility="gone"
-            android:id="@+id/ll_project_weekly"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
-            <ImageView
-                android:layout_gravity="center"
-                android:src="@drawable/review_icon"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <!-- 项目周报-->
             <LinearLayout
-                android:gravity="center_vertical"
+                android:layout_weight="1"
+                android:layout_margin="1dp"
+                android:background="@drawable/new_home_item_bg"
                 android:orientation="vertical"
-                android:layout_width="match_parent"
+                android:id="@+id/project_report_area"
+                android:layout_width="0dp"
                 android:layout_height="match_parent">
+                <ImageView
+                    android:layout_gravity="center"
+                    android:src="@drawable/weekly_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:textColor="#3dd078"
+                    android:text="项目周报"
+                    android:textSize="15sp"
+                    android:id="@+id/weekly_report"
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <!--项目周报审核-->
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_margin="1dp"
+                android:visibility="gone"
+                android:background="@drawable/new_home_item_bg"
+                android:orientation="vertical"
+                android:id="@+id/ll_project_weekly"
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_gravity="center"
+                    android:src="@drawable/weekly1_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:textColor="#3dd078"
                     android:text="项目周报审核"
-                    android:textSize="32sp"
+                    android:textSize="15sp"
                     android:id="@+id/review01"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
-                <TextView
-                    android:text="审核并通过项目周报"
-                    android:textSize="12sp"
-                    android:textColor="#919191"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
-        </LinearLayout>
-        <!-- 项目周报-->
-        <LinearLayout
-            android:layout_weight="1"
-            android:background="@drawable/new_home_item_bg"
-            android:orientation="horizontal"
-            android:id="@+id/project_report_area"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-            <ImageView
-                android:layout_gravity="center"
-                android:src="@drawable/weekly_icon"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <!-- 工时-->
             <LinearLayout
-                android:gravity="center_vertical"
+                android:layout_weight="1"
+                android:layout_margin="1dp"
+                android:background="@drawable/new_home_item_bg"
                 android:orientation="vertical"
-                android:layout_width="match_parent"
+                android:id="@+id/gongshi_area"
+                android:layout_width="0dp"
                 android:layout_height="match_parent">
+                <ImageView
+                    android:layout_gravity="center"
+                    android:src="@drawable/hours_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:textColor="#3dd078"
-                    android:text="项目周报weekly"
-                    android:textSize="32sp"
-                    android:id="@+id/weekly_report"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
-                <TextView
-                    android:text="各项目组周报"
-                    android:textSize="12sp"
-                    android:textColor="#919191"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
-            </LinearLayout>
-        </LinearLayout>
-        <!-- 工时-->
-        <LinearLayout
-            android:layout_weight="1"
-            android:background="@drawable/new_home_item_bg"
-            android:orientation="horizontal"
-            android:id="@+id/jixiao_area"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-            <ImageView
-                android:layout_gravity="center"
-                android:src="@drawable/performance_icon"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <LinearLayout
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:textColor="#3dd078"
-                    android:text="工时统计workTime"
-                    android:textSize="32sp"
+                    android:text="工时统计"
+                    android:textSize="15sp"
                     android:id="@+id/jixiao"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
-                <TextView
-                    android:text="成员工时信息"
-                    android:textSize="12sp"
-                    android:textColor="#919191"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"/>
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
+
 
     </LinearLayout>
 </LinearLayout>
